Getting Started with Istio Ambient Mesh In Kubernetes/demo-service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver-service-2
  namespace: ambient
spec:
  selector:
    app: echoserver-app-2
  ports:
  - port: 80
    targetPort: 80
